--- a/meu_portifolio/package.json
+++ b/meu_portifolio/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/react-fontawesome": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
