Update Vercel build command to use 'vite build' for deployment

--- a/meu_portifolio/package.json
+++ b/meu_portifolio/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "vercel": {
-    "buildCommand": "vite",
+    "buildCommand": "vite build",
     "outputDirectory": "dist",
     "devCommand": "vite",
     "cleanUrls": true
