Fix homepage URL format in package.json and clean up comments in vite.config.js

--- a/meu_portifolio/package.json
+++ b/meu_portifolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://arieldreis.github.io/Portifolio",
+  "homepage": "https://arieldreis.github.io/Portifolio/",
   "name": "meu_portifolio",
   "private": true,
   "version": "0.0.0",
