--- a/meu_portifolio/package.json
+++ b/meu_portifolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://arieldreis.github.io/Portifolio/",
+  "homepage": "https://arieldreis.github.io/Portifolio",
   "name": "meu_portifolio",
   "private": true,
   "version": "0.0.0",
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d ./dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
